clusters/server/apps/finances/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finances
  namespace: finances
spec:
  type: ClusterIP
  selector: { app: finances }
  ports:
    - port: 80
      targetPort: 80
