clusters/server/apps/finances/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finances
  namespace: finances
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: finances.home-server
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finances
                port:
                  number: 80
